fix: align datatable clickability and tax payments remaining-balance column styling

--- a/src/components/TaxPayments/TaxPaymentsTable/taxPaymentsTable.scss
+++ b/src/components/TaxPayments/TaxPaymentsTable/taxPaymentsTable.scss
@@ -13,7 +13,7 @@
   .Layer__UI__Table-Column__TaxPaymentsTable,
   .Layer__UI__Table-Cell__TaxPaymentsTable {
     &--RolledOverFromPrevious,
-    &--CumulativeTaxesOwed,
+    &--RemainingBalance,
     &--Estimated,
     &--Paid {
       justify-content: flex-end;
